Correct the alignment of yaml toolbar links Also switch to use PatternFly Divider component

--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -245,12 +245,6 @@ dl.co-inline {
   background-color: #d64456;
 }
 
-.co-action-divider {
-  color: $pf-color-black-600;
-  display: inline-block;
-  margin: 0 10px 0 10px;
-}
-
 .co-break-word {
   @include co-break-word;
 }
